import React from 'react';
import renderer from 'react-test-renderer';
import {
  minimalCheckBoxFieldForm,
  minimalNumberFieldForm,
  minimalSelectFieldForm,
  minimalTextAreaFieldForm,
  minimalTextFieldForm,
  renderForm,
} from './util/testHelpers';

// TODO test states (with/without error)
describe('The field pack', () => {
  it('renders a minimal text field', () => {
    const Form1 = renderForm(minimalTextFieldForm);
    expect(renderer.create(<Form1 />).toJSON()).toMatchSnapshot();

    const Form2 = renderForm(() =>
      minimalTextFieldForm({ description: 'Field description' }),
    );
    expect(renderer.create(<Form2 />).toJSON()).toMatchSnapshot();
  });

  it('renders a minimal textarea field', () => {
    const Form = renderForm(minimalTextAreaFieldForm);
    expect(renderer.create(<Form />).toJSON()).toMatchSnapshot();

    const Form2 = renderForm(() =>
      minimalTextAreaFieldForm({ description: 'Field description' }),
    );
    expect(renderer.create(<Form2 />).toJSON()).toMatchSnapshot();
  });

  it('renders a minimal select field', () => {
    const Form = renderForm(minimalSelectFieldForm);
    expect(renderer.create(<Form />).toJSON()).toMatchSnapshot();

    const Form2 = renderForm(() =>
      minimalSelectFieldForm({ description: 'Field description' }),
    );
    expect(renderer.create(<Form2 />).toJSON()).toMatchSnapshot();
  });

  it('renders a minimal checkbox field', () => {
    const Form = renderForm(minimalCheckBoxFieldForm);
    expect(renderer.create(<Form />).toJSON()).toMatchSnapshot();

    const Form2 = renderForm(() =>
      minimalCheckBoxFieldForm({ description: 'Field description' }),
    );
    expect(renderer.create(<Form2 />).toJSON()).toMatchSnapshot();
  });

  it('renders a minimal number field', () => {
    const Form = renderForm(minimalNumberFieldForm);
    expect(renderer.create(<Form />).toJSON()).toMatchSnapshot();

    const Form2 = renderForm(() =>
      minimalNumberFieldForm({ description: 'Field description' }),
    );
    expect(renderer.create(<Form2 />).toJSON()).toMatchSnapshot();
  });
});
